# pitch-control

./: .gitignore  README.md  pyproject.toml
examples/: basic_example.py  performance_comparison.py
pitch_control/acceleration/: __init__.py  numba_backend.py  vectorized.py
pitch_control/core/: __init__.py  control.py  physics.py  pitch.py  player.py
pitch_control/data/: metrica.py
pitch_control/models/: __init__.py  base.py  spearman.py
pitch_control/speedup/: __init__.py  numba_backend.py  vectorized.py
pitch_control/utils/: profiling.py  visualization.py
tests/: __init__.py  test_core.py  test_vectorized_model.py
