[project]
name = "pitch-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "mkh1991@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "scipy>=1.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
]

acceleration = [
    "torch>=2.0.0",
    "numba>=0.58.0",
    "jax[cpu]>=0.4.0",  # Use jax[cuda] for GPU
]

api = [
    "fastapi>=0.100.0",
    "redis>=4.5.0",
    "uvicorn[standard]>=0.23.0",
]

visualization = [
    "plotly>=5.15.0",
    "bokeh>=3.2.0",
    "seaborn>=0.12.0",
]

all = [
    "pitch-control[dev,acceleration,api,visualization]",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.isort]
known-first-party = ["pitch_control"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=pitch_control --cov-report=html --cov-report=term-missing"
